--- a/app/globals.css
+++ b/app/globals.css
@@ -5,14 +5,18 @@
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 235, 235, 235;
+}
+
+* {
+  transition: all .15s ease;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 235, 235, 235;
+    --background-start-rgb: 10, 10, 15;
+    --background-end-rgb: 10, 10, 15;
   }
 }
 
@@ -24,4 +28,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+
+/* Custom css */
+.layout {
+  display: flex;
 }
