--- a/app/globals.css
+++ b/app/globals.css
@@ -4,17 +4,22 @@
 
 @layer utilities {
   .custom-radial-gradient {
-    background-image: radial-gradient(hsl(0, 0%, 70%) 5%, transparent 0);
+    background-image: radial-gradient(hsl(0, 0%, 63%) 5%, transparent 0);
     background-size: 20px 20px;
   }
 
   .diagonal-gradient {
     background-image: repeating-linear-gradient(-45deg, 
     transparent, transparent 10px, 
-    rgb(55, 55, 55, 0.35) 0, rgb(55, 55, 55, 0.35) 20px);
+    rgb(55, 55, 55, 0.15) 0, rgb(55, 55, 55, 0.15) 20px);
   }
-
+  
   @media (prefers-color-scheme: dark) {
+    .dark .diagonal-gradient-dark {
+      background-image: repeating-linear-gradient(-45deg, 
+      transparent, transparent 10px, 
+      rgb(55, 55, 55, 0.35) 0, rgb(55, 55, 55, 0.35) 20px);
+    }
     .custom-radial-gradient {
       background-image: radial-gradient(hsl(0, 1%, 31%) 5%, transparent 0);
     }
