--- a/app/globals.css
+++ b/app/globals.css
@@ -140,3 +140,9 @@ body {
 .transition {
   transition: 300ms ease;
 }
+
+/* Toggle B */
+input:checked ~ .dot {
+  transform: translateX(100%);
+  background-color: #00db96;
+}
